# beancount-importer

./: LICENSE  README.md  pyproject.toml
src/: config.py  main.py
src/readers/: imap.py
