[tool.poetry]
name = "beancount-importer"
version = "0.1.0"
description = ""
authors = ["Alvie Zhang <alvie.zhang@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dynaconf = "~3.1.9"

[tool.poetry.dev-dependencies]
pytest = "~7.1.3"
black = "~22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
